// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/NotificationRow.tsx should render itself & its children - group by date 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex border-b border-gray-100 bg-white px-3 py-2 hover:bg-gray-100 dark:border-gray-darker dark:bg-gray-dark dark:text-white dark:hover:bg-gray-darker"
        id="138661096"
      >
        <div
          class="mr-3 flex items-center justify-center"
        >
          <div
            role="presentation"
          >
            <div
              aria-labelledby="2"
              role="img"
              style="display: inline-block; position: relative; outline: 0;"
            >
              <span
                class="css-1hqd2wf"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  class="css-13ep12v"
                  data-vc="avatar-image"
                  src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                  style="border-radius: 50%;"
                />
              </span>
              <span
                hidden=""
                id="2"
              >
                gitify-app
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex-1 truncate cursor-pointer"
        >
          <div
            class="mb-1 flex items-center gap-1 text-xs font-medium opacity-80"
          >
            <span>
              <img
                alt="atlasify-app/notifications-test's avatar"
                class="rounded-full object-cover size-4"
                src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
              />
            </span>
            <span
              class="cursor-pointer truncate opacity-90"
              title="atlasify-app/notifications-test"
            >
              atlasify-app/notifications-test
            </span>
          </div>
          <div
            class="flex gap-1 items-center mb-1 truncate text-sm"
            role="main"
            title="I am a robot and this is a test!"
          >
            <span
              class="truncate"
            >
              I am a robot and this is a test!
            </span>
            <span
              class="text-xs"
              title="gitify-app updated 7 years ago"
            >
              7 years ago
            </span>
          </div>
          <div>
            <div
              class="flex flex-wrap items-center gap-1 text-xs opacity-80"
            >
              <div
                aria-labelledby="3"
                role="img"
                style="display: inline-block; position: relative; outline: 0;"
              >
                <span
                  class="css-122fgfa"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="css-13ep12v"
                    data-vc="avatar-image"
                    src="https://github.atlasify.io/favicon.ico"
                    style="border-radius: 2px;"
                  />
                </span>
                <span
                  hidden=""
                  id="3"
                >
                  Repository
                </span>
              </div>
              <div>
                Repository
              </div>
            </div>
            <div
              class="flex flex-wrap items-center gap-1 text-xs opacity-80"
            >
              <span
                aria-label="Bitbucket"
                class="css-5vjqu0"
                role="img"
                style="--logo-color: inherit; --logo-fill: currentColor;"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="32"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
      
                  <path
                    d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                    fill="#1868DB"
                  />
                  
    
                </svg>
              </span>
              Repository
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
        >
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark as Read"
            type="button"
          >
            <svg
              aria-label="Mark as Read"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex border-b border-gray-100 bg-white px-3 py-2 hover:bg-gray-100 dark:border-gray-darker dark:bg-gray-dark dark:text-white dark:hover:bg-gray-darker"
      id="138661096"
    >
      <div
        class="mr-3 flex items-center justify-center"
      >
        <div
          role="presentation"
        >
          <div
            aria-labelledby="2"
            role="img"
            style="display: inline-block; position: relative; outline: 0;"
          >
            <span
              class="css-1hqd2wf"
            >
              <img
                alt=""
                aria-hidden="true"
                class="css-13ep12v"
                data-vc="avatar-image"
                src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                style="border-radius: 50%;"
              />
            </span>
            <span
              hidden=""
              id="2"
            >
              gitify-app
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex-1 truncate cursor-pointer"
      >
        <div
          class="mb-1 flex items-center gap-1 text-xs font-medium opacity-80"
        >
          <span>
            <img
              alt="atlasify-app/notifications-test's avatar"
              class="rounded-full object-cover size-4"
              src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
            />
          </span>
          <span
            class="cursor-pointer truncate opacity-90"
            title="atlasify-app/notifications-test"
          >
            atlasify-app/notifications-test
          </span>
        </div>
        <div
          class="flex gap-1 items-center mb-1 truncate text-sm"
          role="main"
          title="I am a robot and this is a test!"
        >
          <span
            class="truncate"
          >
            I am a robot and this is a test!
          </span>
          <span
            class="text-xs"
            title="gitify-app updated 7 years ago"
          >
            7 years ago
          </span>
        </div>
        <div>
          <div
            class="flex flex-wrap items-center gap-1 text-xs opacity-80"
          >
            <div
              aria-labelledby="3"
              role="img"
              style="display: inline-block; position: relative; outline: 0;"
            >
              <span
                class="css-122fgfa"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  class="css-13ep12v"
                  data-vc="avatar-image"
                  src="https://github.atlasify.io/favicon.ico"
                  style="border-radius: 2px;"
                />
              </span>
              <span
                hidden=""
                id="3"
              >
                Repository
              </span>
            </div>
            <div>
              Repository
            </div>
          </div>
          <div
            class="flex flex-wrap items-center gap-1 text-xs opacity-80"
          >
            <span
              aria-label="Bitbucket"
              class="css-5vjqu0"
              role="img"
              style="--logo-color: inherit; --logo-fill: currentColor;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="32"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                
      
                <path
                  d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                  fill="#1868DB"
                />
                
    
              </svg>
            </span>
            Repository
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
      >
        <button
          class="h-full hover:text-green-500 focus:outline-none"
          title="Mark as Read"
          type="button"
        >
          <svg
            aria-label="Mark as Read"
            class="octicon octicon-read"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="14"
          >
            <path
              d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/NotificationRow.tsx should render itself & its children - group by repositories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex border-b border-gray-100 bg-white px-3 py-2 hover:bg-gray-100 dark:border-gray-darker dark:bg-gray-dark dark:text-white dark:hover:bg-gray-darker"
        id="138661096"
      >
        <div
          class="mr-3 flex items-center justify-center"
        >
          <div
            role="presentation"
          >
            <div
              aria-labelledby="5"
              role="img"
              style="display: inline-block; position: relative; outline: 0;"
            >
              <span
                class="css-1hqd2wf"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  class="css-13ep12v"
                  data-vc="avatar-image"
                  src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                  style="border-radius: 50%;"
                />
              </span>
              <span
                hidden=""
                id="5"
              >
                gitify-app
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex-1 truncate cursor-pointer"
        >
          <div
            class="flex gap-1 items-center mb-1 truncate text-sm"
            role="main"
            title="I am a robot and this is a test!"
          >
            <span
              class="truncate"
            >
              I am a robot and this is a test!
            </span>
            <span
              class="text-xs"
              title="gitify-app updated 7 years ago"
            >
              7 years ago
            </span>
          </div>
          <div>
            <div
              class="flex flex-wrap items-center gap-1 text-xs opacity-80"
            >
              <div
                aria-labelledby="6"
                role="img"
                style="display: inline-block; position: relative; outline: 0;"
              >
                <span
                  class="css-122fgfa"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="css-13ep12v"
                    data-vc="avatar-image"
                    src="https://github.atlasify.io/favicon.ico"
                    style="border-radius: 2px;"
                  />
                </span>
                <span
                  hidden=""
                  id="6"
                >
                  Repository
                </span>
              </div>
              <div>
                Repository
              </div>
            </div>
            <div
              class="flex flex-wrap items-center gap-1 text-xs opacity-80"
            >
              <span
                aria-label="Bitbucket"
                class="css-5vjqu0"
                role="img"
                style="--logo-color: inherit; --logo-fill: currentColor;"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="32"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
      
                  <path
                    d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                    fill="#1868DB"
                  />
                  
    
                </svg>
              </span>
              Repository
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
        >
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark as Read"
            type="button"
          >
            <svg
              aria-label="Mark as Read"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex border-b border-gray-100 bg-white px-3 py-2 hover:bg-gray-100 dark:border-gray-darker dark:bg-gray-dark dark:text-white dark:hover:bg-gray-darker"
      id="138661096"
    >
      <div
        class="mr-3 flex items-center justify-center"
      >
        <div
          role="presentation"
        >
          <div
            aria-labelledby="5"
            role="img"
            style="display: inline-block; position: relative; outline: 0;"
          >
            <span
              class="css-1hqd2wf"
            >
              <img
                alt=""
                aria-hidden="true"
                class="css-13ep12v"
                data-vc="avatar-image"
                src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                style="border-radius: 50%;"
              />
            </span>
            <span
              hidden=""
              id="5"
            >
              gitify-app
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex-1 truncate cursor-pointer"
      >
        <div
          class="flex gap-1 items-center mb-1 truncate text-sm"
          role="main"
          title="I am a robot and this is a test!"
        >
          <span
            class="truncate"
          >
            I am a robot and this is a test!
          </span>
          <span
            class="text-xs"
            title="gitify-app updated 7 years ago"
          >
            7 years ago
          </span>
        </div>
        <div>
          <div
            class="flex flex-wrap items-center gap-1 text-xs opacity-80"
          >
            <div
              aria-labelledby="6"
              role="img"
              style="display: inline-block; position: relative; outline: 0;"
            >
              <span
                class="css-122fgfa"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  class="css-13ep12v"
                  data-vc="avatar-image"
                  src="https://github.atlasify.io/favicon.ico"
                  style="border-radius: 2px;"
                />
              </span>
              <span
                hidden=""
                id="6"
              >
                Repository
              </span>
            </div>
            <div>
              Repository
            </div>
          </div>
          <div
            class="flex flex-wrap items-center gap-1 text-xs opacity-80"
          >
            <span
              aria-label="Bitbucket"
              class="css-5vjqu0"
              role="img"
              style="--logo-color: inherit; --logo-fill: currentColor;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="32"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                
      
                <path
                  d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                  fill="#1868DB"
                />
                
    
              </svg>
            </span>
            Repository
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
      >
        <button
          class="h-full hover:text-green-500 focus:outline-none"
          title="Mark as Read"
          type="button"
        >
          <svg
            aria-label="Mark as Read"
            class="octicon octicon-read"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="14"
          >
            <path
              d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
